Fix spacing gap

--- a/src/dabbit.styl
+++ b/src/dabbit.styl
@@ -19,6 +19,10 @@
                   monospace //TODO
   color black
   text-shadow 0 1px 0 rgba(255,255,255, 1)
+  pre > *
+    // fix to accomplish selection perfectness,
+    // depends on line-height
+    padding .15em 0
   
   //SPACING
   .CodeMirror-sizer
